apiserver: add xene secrets route to apiserver
